<resources>
    <string name="app_name">Mindvalley_Arun_Android_Test</string>
    <string name="action_settings">Settings</string>
    <string name="internet_status_message">No internet detected, kindly make sure internet is connected.</string>
    <string name="text_regular_image">Regular Image</string>
    <string name="text_small_image">Small Image</string>
    <string name="text_thumb_image">Thumb Image</string>
    <string name="fab_menu_label">Welcome to user profile</string>
    <string name="fab_label1">View User Info</string>
    <string name="fab_label2">Check out user link</string>
    <string name="fab_label3">Share user details</string>
    <string name="fab_label4">Swipe user pictures</string>
    <string name="id_label">ID:</string>
    <string name="username_label">User Name:</string>
    <string name="name_label">Name:</string>

</resources>
