<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="@dimen/view_margin"
            app:expandedTitleMarginStart="@dimen/view_margin"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/my_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="#F7F3EE"
        android:clipToPadding="false"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu1"
        style="@style/MenuButtonsSmall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="right|bottom"
        android:padding="8dp"
        android:visibility="visible"
        fab:menu_backgroundColor="#cc7C7A79"
        fab:menu_colorNormal="@color/colorPrimary"
        fab:menu_colorPressed="#43A047"
        fab:menu_colorRipple="@color/colorPrimaryDark"
        fab:menu_fab_label="@string/fab_menu_label"
        fab:menu_labels_ellipsize="middle"
        fab:menu_labels_singleLine="true">


        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab1"
            style="@style/MenuButtonsSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_view"
            fab:fab_label="@string/fab_label1"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab2"
            style="@style/MenuButtonsSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_together"
            fab:fab_label="@string/fab_label2"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab3"
            style="@style/MenuButtonsSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            fab:fab_label="@string/fab_label3"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab4"
            style="@style/MenuButtonsSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_gallery"
            fab:fab_label="@string/fab_label4"
            fab:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>


</android.support.design.widget.CoordinatorLayout>