<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:foreground="?attr/selectableItemBackground"
    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@color/navigationBarColor">

        <ImageView
            android:id="@+id/imageView_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_margin="4dp"
            android:adjustViewBounds="true"
            android:padding="4dp"
            android:scaleType="centerCrop" />


        <RelativeLayout
            android:id="@+id/relativeLayout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView_image"
            android:layout_margin="3dp">

            <GridLayout
                android:id="@+id/gridlayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:columnCount="3">

                <TextView
                    android:id="@+id/textView_id_label"
                    style="@style/DetailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_row="0"
                    android:text="@string/id_label" />

                <TextView
                    android:id="@+id/textView_username_label"
                    style="@style/DetailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_row="1"
                    android:text="@string/username_label" />

                <TextView
                    android:id="@+id/textView_name_label"
                    style="@style/DetailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_row="2"
                    android:text="@string/name_label" />

                <TextView
                    android:id="@+id/textView_id_value"
                    style="@style/ExpText"
                    android:layout_column="1"
                    android:layout_row="0" />

                <TextView
                    android:id="@+id/textView_username_value"
                    style="@style/ExpText"
                    android:layout_column="1"
                    android:layout_row="1" />

                <EditText
                    android:id="@+id/textView_name_value"
                    style="@style/ExpText"
                    android:layout_column="1"
                    android:layout_row="2" />
            </GridLayout>

        </RelativeLayout>

        <ImageButton
            android:id="@+id/imageButton_profile_link"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_margin="8dp"
            android:background="@drawable/profile_link_button_selector"
            android:scaleType="fitXY" />

        <RelativeLayout
            android:id="@+id/relativeLayout_likes"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_below="@+id/imageButton_profile_link"
            android:layout_margin="8dp"
            android:background="@drawable/likes_icon">

            <TextView
                android:id="@+id/textView_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/background_light"
                android:textSize="9dp"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/imageButton_share"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_below="@+id/relativeLayout_likes"
            android:layout_margin="8dp"
            android:background="@drawable/sharebutton_selector"
            android:scaleType="fitXY" />

    </RelativeLayout>

</android.support.v7.widget.CardView>